--- a/frontend/components/account/css/account.css
+++ b/frontend/components/account/css/account.css
@@ -334,6 +334,24 @@ account-billing .accountBillingSave button {
   margin-left: 0px;
 }
 
+account-billing .loadingHolder {
+  margin: auto 0;
+  display: block;
+}
+
+account-billing .loadingHolder h3 {
+  text-align: center;
+  margin-top: 40px;
+}
+
+
+account-billing .loading {
+    width: 50px;
+    height: 50px;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
 account-billing .userContent {
   max-height: calc(100vh - 270px) !important;
 }
