--- a/frontend/components/model/pug/model.pug
+++ b/frontend/components/model/pug/model.pug
@@ -34,3 +34,7 @@
 
 		right-panel(style="pointer-events:{{vm.pointerEvents}}")
 		bottom-buttons(style="pointer-events:{{vm.pointerEvents}}")
+
+error-dialog(
+	error-message="vm.errorMessage"
+)
