ISSUE #394 - Make login page responsive

--- a/frontend/components/login/pug/login.pug
+++ b/frontend/components/login/pug/login.pug
@@ -1,5 +1,12 @@
 .homeUserContent(layout="row", layout-align="center", flex)
-	md-content.md-whiteframe-1dp(aria-label="Registered", flex-lg="25", flex-gt-lg="15")
+	md-content.md-whiteframe(
+		aria-label="Registered"
+		flex-xl="15"
+		flex-lg="20"
+		flex-md="30"
+		flex-sm="50"
+		flex-xs="75")
+
 		md-toolbar
 			.md-toolbar-tools
 				h2 Log in
