--- a/pug/frontend.pug
+++ b/pug/frontend.pug
@@ -6,7 +6,8 @@ html(lang="en")
 		// Meta, title, CSS, favicons, etc.
 		meta(charset='utf-8')
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
-
+		meta(name="viewport" content="width=device-width, initial-scale=1")
+		
 		title 3D Repo | Online BIM collaboration platform
 
 		script(type="text/javascript", src="/public/plugins/base/config.js")
