--- a/frontend/components/account/css/account.css
+++ b/frontend/components/account/css/account.css
@@ -323,6 +323,7 @@ account-menu #accountMenuContent md-menu-item > .md-button {
 .deleteDialog #deleteError {
   margin: 0;
   color: #F44336;
+  margin-top: 5px;
 }
 
 /** Account Billing ***************************************************************************************************/
