--- a/frontend/components/revisions/css/revisions.css
+++ b/frontend/components/revisions/css/revisions.css
@@ -25,8 +25,9 @@ revisions {
     background: rgba(255,255,255,0.08);
 }
 
-revisionsDialog h3 {
-    font-weight: lighter;
+.revisionsDialog h3 {
+   font-weight: lighter;
+    text-align: center;
 }
 
 /** Revisions Dialog *************************************************************************************************/
