ISSUE #394 - Resolve many bugs with permission assignments

--- a/frontend/components/account/css/account.css
+++ b/frontend/components/account/css/account.css
@@ -237,7 +237,9 @@ account-info .accountInfoPage .md-button {
   background: #E8EAF6;
   margin: auto;
   margin-top: 20px;
+  margin-bottom: 20px;
   cursor: pointer;
+  border-radius: 6px;
 }
 
 .avatar-upload{
